--- a/Coefficients binomiaux.tex
+++ b/Coefficients binomiaux.tex
@@ -1,18 +1,21 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
-
-\title{Coefficients binomiaux}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
 \theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
 
+\title{Coefficients binomiaux}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Coefficient binomial {{{1
 \section{Coefficient binomial}
 \begin{defi}
 	Pour \(n \in \mathbb{N}\ et\ k \in [\![0,n]\!]\): \\
@@ -53,6 +56,7 @@
 		\[n^{p-1} \equiv 1\pmod{p} \]
 \end{itemize}
 
+%Sommes géométriques {{{1
 \section{Sommes g\'eom\'etriques}
 \begin{itemize}
 	\item [-] Principe de t\'elescopage (\(n \in \mathbb{N}\) et \(a_0, \hdots, a_{n+1} \in \mathbb{C}\)):
@@ -70,6 +74,7 @@
 		\end{itemize}
 \end{itemize}
 
+%Remarques {{{1
 \section{Remarques}
 \begin{prop} Changement d'indice\\
 	Soient I et J deux ensembles finis d'indices et $\varphi$ une bijection de I sur J. Alors
