--- a/Logarithme et exponentielle.tex
+++ b/Logarithme et exponentielle.tex
@@ -1,20 +1,23 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
 
-\title{Logarithme et exponentielle}
-\date{}
-
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
 \theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
 
+\title{Logarithme et exponentielle}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Logarithme {{{1
 \section{Logarithme}
 $\ln$ est l'application d\'efinie telle que: $\mathbb{R}^*_+ \rightarrow \mathbb{R}$
 \begin{prop} $x,y > 0$
@@ -34,7 +37,8 @@ $\ln$ est l'application d\'efinie telle que: $\mathbb{R}^*_+ \rightarrow \mathbb
 	\end{itemize}
 \end{prop}
 
-\section{exponentielle}
+%Exponentielle {{{1
+\section{Exponentielle}
 $\exp$ est l'application r\'eciproque de $\ln$ d\'efinie telle que: $\mathbb{R} \rightarrow \mathbb{R}^*_+$
 \begin{prop} $ $
 	\begin{itemize}
