--- a/Dénombrement.tex
+++ b/Dénombrement.tex
@@ -1,13 +1,12 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{mathrsfs}
-
-\title{D\'enombrement}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -17,9 +16,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{D\'enombrement}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Ensembles finis {{{1
 \section{Ensembles finis}
 \begin{defi}
 	Soit $E$ un ensemble. $E$ est dit fini s'il existe $n \in \mathbb{N}$ tel que $E$ est en bijection avec $[\![1,n]\!]$ \\
@@ -33,7 +36,8 @@
 	\end{enumerate}
 \end{prop}
 
-\section{Op\'erations sur les enmbles finis}
+%Opérations sur les ensembles finis {{{1
+\section{Op\'erations sur les ensembles finis}
 \begin{prop} Soient $E$ et $F$ deux ensembles finis
 	\begin{enumerate}
 		\item R\'eunion de deux ensembles
@@ -56,6 +60,7 @@
 	\end{enumerate}
 \end{prop}
 
+%Applications entre ensembles finis {{{1
 \section{Applications entre ensembles finis}
 \begin{prop} $ $
 	\begin{enumerate}
@@ -97,6 +102,7 @@
 		\[|S(E)| = n!\]
 \end{enumerate}
 
+%Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
 	\item Utiliser des ensembles compl\'ementaires
