--- a/Dérivées.tex
+++ b/Dérivées.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{D\'eriv\'ees}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -15,9 +14,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{D\'eriv\'ees}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Définition {{{1
 \section{D\'efinition}
 \begin{defi}
 	Soit I un intervalle non trivial de $\mathbb{R},\ x_0 \in I, f:I \rightarrow \mathbb{R}$. On note $\Phi_{x_0, f}$ l'application
@@ -36,6 +39,7 @@
 	$f$ d\'erivable en $x_0 \Rightarrow f$ continue en $x_0$
 \end{prop}
 
+%Théorèmes généraux {{{1
 \section{Th\'eor\`emes g\'en\'eraux}
 \begin{theo}
 	$f,g: I \rightarrow \mathbb{R}, x_0 \in I, \alpha \in \mathbb{R}$. On suppose $f$ et $g$ d\'erivables en $x_0$
@@ -59,6 +63,7 @@
 	\[\forall y \in J,\ g'(y) = \frac{1}{f'(g(y))}\]
 \end{theo}
 
+%Rolle, TAF {{{1
 \section{Rolle, TAF}
 \begin{theo} Rolle\\
 	Soient $a, b \in \mathbb{R}$ tels que $a < b$, $f:[a,b] \rightarrow \mathbb{R}$ continue sur $[a,b]$, d\'erivable sur $]a,b[$ et telle que $f(a) = f(b)$. Alors il existe $c \in ]a,b[$
@@ -105,6 +110,7 @@
 	On suppose que $f'(x) \underset{x \rightarrow x_0}{\rightarrow} l \in \mathbb{R}$ alors, $f$ est d\'erivable en $x_0$ et $f'(x_0) = l$
 \end{theo}
 
+%Ordre supérieur {{{1
 \section{Ordre sup\'erieur}
 \begin{defi}
 	Soit I un intervalle de $\mathbb{R}, f:I \rightarrow \mathbb{R}, n \in \mathbb{N}^{*}$ \\
@@ -146,6 +152,7 @@
 	est de classe $C^n$ sur I et $\forall k \in [\![0,n]\!],\ f^{(k)}(x_0) = l_k$
 \end{theo}
 
+%Inégalité de Taylor-Lagrange, Formule de Taylor-Young {{{1
 \section{In\'egalit\'e de Taylor-Lagrange, Formule de Taylor-Young}
 \begin{defi} Polyn\^omes de Taylor \\
 	Soit I un intervalle de $\mathbb{R},\ x_0 \in I,\ f \in D^n(I, \mathbb{R})$. Pour $x \in \mathbb{R}$ on pose:
