--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -1,11 +1,10 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
-
-\title{D\'eveloppements limit\'es}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -13,9 +12,13 @@
 \theoremstyle{definition} \newtheorem*{coro}{Corollaire}
 \theoremstyle{remark} \newtheorem*{rqs}{Remarques}
 
+\title{D\'eveloppements limit\'es}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Définitions {{{1
 \section{D\'efinitions}
 \begin{defi}
 	Soit $I$ un intervalle de $\mathbb{R}$, $f:I \rightarrow \mathbb{R},\ x_0 \in I,\ n \in \mathbb{N}$ \\
@@ -50,6 +53,7 @@
 	On obtient la partie r\'eguli\`ere du $DL_n(0)$ de $f'$ en d\'erivant la partie r\'eguli\`ere du $DL_{n+1}(0)$ de $f$
 \end{theo}
 
+%Opérations sur les DL {{{1
 \section{Op\'erations sur les DL}
 \begin{theo} Combinaison lin\'eaire\\
 	$f,g: I \rightarrow \mathbb{R}$ admettent des $DL_n(0)$ de parties r\'eguli\`eres respectives $P$ et $Q$. \\
@@ -73,6 +77,7 @@
 	\[\frac{1}{f(x)} = \frac{1}{a_0} \frac{1}{1 + g(x)}\]
 \end{theo}
 
+%Utilisations des DL {{{1
 \section{Utilisation des DL}
 \begin{enumerate}
 	\item Recherche d'\'equivalents et de limites \\
@@ -86,6 +91,7 @@
 		Ainsi on effectue une composition \'el\'ementaire par l'inverse de $\varphi$ puis on multiplie par $x$.
 \end{enumerate}
 
+%DL Classiques {{{1
 \section{DL classiques}
 \begin{itemize}
 	\item [-] $\sin x = x - \frac{x^3}{6} + \frac{x^5}{120} + \hdots + (-1)^n \frac{x^{2n+1}}{(2n+1)!} + o(x^{2n+1})$
@@ -94,8 +100,8 @@
 	\item [-] $\cosh x = 1 + \frac{x^2}{2} + \frac{x^4}{24} + \hdots + \frac{x^{2n}}{(2n)!} + o(x^{2n})$
 	\item [-] $e^x = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \hdots + \frac{x^n}{n!} + o(x^n)$
 	\item [-] $\ln(1+x) = x - \frac{x^2}{2} + \frac{x^3}{3} + \hdots + (-1)^{n-1} \frac{x^n}{n} + o(x^n)$
-	\item [-] $(1+x)^{\alpha} = 1 + \alpha x + \frac{\alpha(\alpha -1)}{2} x^2 + \hdots + \frac{\alpha(\alpha-1)\hdots(\alpha-n+1)}{n!} x^n
-		+ o(x^n)$
+	\item [-] $(1+x)^{\alpha \in \mathbb{R}} = 1 + \alpha x + \frac{\alpha(\alpha -1)}{2} x^2 + \hdots + \frac{\alpha(\alpha-1)\hdots
+		(\alpha-n+1)}{n!} x^n + o(x^n)$
 	\item [-] $\frac{1}{1-x} = 1 + x + \hdots + x^n + o(x^n)$
 	\item [-] $\frac{1}{1+x} = 1 - x + x^2 + \hdots + (-1)^n x^n + o(x^n)$
 	\item [-] $\tan x = x + \frac{x^3}{3} + \frac{2x^5}{15} + o(x^5)$
@@ -103,10 +109,11 @@
 	\item [-] $\arctan x = x - \frac{x^3}{3} + \frac{x^5}{5} + o(x^5)$
 \end{itemize}
 
+%Remarques {{{1
 \section{Remarques}
 \begin{enumerate}
-	\item On peut se ramener \`a un DL en $0$ en additionant l'odre demand\'e. \\
-	Si on demande DL en 1 de $f$ telle que $f(x) = \cos(x)$, on cherche DL(0) de $x \mapsto \cos(x+1)$
+	\item On peut se ramener \`a un DL en $0$ en additionant le point demand\'e. \\
+	Si on demande $DL_n$ en 1 de $f$ telle que $f(x) = \cos(x)$, on cherche $DL_n(0)$ de $x \mapsto \cos(x+1)$
 \end{enumerate}
 
 \end{document}
