--- a/Entiers naturels.tex
+++ b/Entiers naturels.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{Entiers naturels}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -16,9 +15,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{Entiers naturels}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Axiomatique de péano {{{1
 \section{Axiomatique de p\'eano}
 Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre totale $\leq$ telle que:
 \begin{enumerate}
@@ -27,7 +30,8 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 	\item $\mathbb{N}$ n'est pas major\'ee
 \end{enumerate}
 
-\section{r\'ecurrences}
+%Récurrences {{{1
+\section{R\'ecurrences}
 \begin{enumerate}
 	\item r\'ecurrence simple:
 		\begin{enumerate}
@@ -46,6 +50,7 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 		\end{enumerate}
 \end{enumerate}
 
+%Propriétées {{{1
 \section{Propri\'et\'ees}
 \begin{theo} D\'ecomposition en nombres premiers \\
 		Soit $n \in \mathbb{N}^*$, alors $n$ s'\'ecrit de fa\c{c}on unique:
@@ -75,5 +80,17 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 		\item $r < b$
 	\end{enumerate}
 \end{defi}
+
+\begin{theo} Num\'erotation en base $b$
+	\begin{itemize}
+		\item [-] Soit $a \in \mathbb{N}^*, b \in \mathbb{N}, b \geq 2$. Alors il existe un unique $m \in \mathbb{N}$ et une unique
+			liste $(\lambda_0, \hdots, \lambda_m)$ d'entiers de $[\![0,b-1]\!]$ v\'erifiant:
+			\[\lambda_m \neq 0$ \text{ et } $a = \sum_{k=0}^m \lambda_k b^k\]
+		\item [-] Cette liste est la liste des chiffres de l'\'ecriture de $a$ en base $b$ et on l'\'ecrit $a =
+			\overline{\lambda_m \hdots \lambda_0}^b$
+		\item [-] Plus pr\'ecisement, on se donne $b$ symbols qui repr\'esentent les entiers \mbox{$[\![0,b-1]\!]$} et on remplace
+			chaque $\lambda_k$ par son symbole
+	\end{itemize}
+\end{theo}
 
 \end{document}
