--- a/Groupes.tex
+++ b/Groupes.tex
@@ -1,13 +1,12 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{mathrsfs}
-
-\title{Groupes}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -17,10 +16,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{Groupes}
+\date{}
+
 \begin{document}
 \maketitle
 
-%GÉNÉRALITËS
+%Généralités sur les lois internes {{{1
 \section{G\'en\'eralit\'es sur les lois internes}
 \begin{defi} LCI \\
 Soit $F$ un ensemble. Une loi de composition interne sur $E$ est une application de $E\times E \rightarrow E$
@@ -73,7 +75,7 @@ Soit $(E, *)$ un mono\"ide. On d\'efinit $x^n,\ n \in \mathbb{N}$ en posant:
 
 \end{theo}
 
-%SOUS GROUPES
+%Sous Groupes {{{1
 \section{Sous groupes}
 \begin{defi} Soit $(G,*)$ un groupe, $H \subset G$.\\
 	On dit que $H$ est un sous groupe lorsque:
@@ -129,6 +131,7 @@ On d\'efinit alors l'ordre par:
 	\end{enumerate}
 \end{prop}
 
+%Morphismes de groupes {{{1
 \section{Morphismes de groupes}
 \begin{defi}
 $(G,.),\ (H, *)$ deux groupes, $f: G \rightarrow H$ \\
