--- a/Intégration.tex
+++ b/Intégration.tex
@@ -1,13 +1,12 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{mathrsfs}
-
-\title{Int\'egration}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -17,9 +16,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{Int\'egration}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Intégrales des fonctions en escalier {{{1
 \section{Int\'egrales des fonctions en escalier}
 \begin{defi} $ $
 \begin{enumerate}
@@ -56,6 +59,7 @@
 	\end{enumerate}
 \end{prop}
 
+%Intégrale d'une fonction continue sur un segment {{{1
 \section{Int\'egrale d'une fonction continue sur un segment}
 \begin{theo} Densit\'e \\
 	Soient $a,b \in \mathbb{R},\ a < b$. Soit $f \in \mathscr{C}([a,b], \mathbb{R})$. Soit $\epsilon > 0$. \\
@@ -142,6 +146,7 @@
 	Si $f$ n'est pas nulle, il y \`a \'egalit\'e si et seulement si $g$ est proportinnielle \`a f
 \end{theo}
 
+%Fonctions continues par morceaux {{{1
 \section{Fonctions continues par morceaux}
 \begin{defi}
 	$f:[a,b] \rightarrow \mathbb{R}$ est continue par morceaux s'il existe une subdivision de $[a,b]$ telle que $\forall i \in [\![0,n-1]\!]$
@@ -155,6 +160,7 @@
 	Le th\'eor\`eme de densit\'e reste valable et par cons\'equent les propri\'et\'ees aussi
 \end{rqs}
 
+%Approximation des intégrales {{{1
 \section{Approximation des int\'egrales}
 \begin{enumerate}
 	\item M\'ethode des rectangles \\
