--- a/Nombres complexes.tex
+++ b/Nombres complexes.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{Nombres complexes}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -17,9 +16,13 @@
 \newcommand*{\bfrac}[2]{\genfrac{}{}{0pt}{}{#1}{#2}}
 \ra{1.3}
 
+\title{Nombres complexes}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Ensemble C {{{1
 \section{Ensemble $\mathbb{C}$}
 \begin{prop} Pour $z \in \mathbb{C}$,
 	\begin{itemize}
