--- a/Primitives de fonctions rationnelles.tex
+++ b/Primitives de fonctions rationnelles.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{Primitives de fonctions rationnelles}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -15,9 +14,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{Primitives de fonctions rationnelles}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Primitives {{{1
 \section{Primitives}
 Soit la fonction $F: x \mapsto \frac{P(x)}{Q(x)}$, $P,\ Q$ polyn\^omiales. $F$ peut alors s'\'ecrire comme somme de fonctions rationnelles
 d'un des types suivants:
@@ -27,7 +30,6 @@ d'un des types suivants:
 	\item $x \mapsto \frac{\lambda x + 	\mu}{(x^2 + bx + c)^{\alpha}}$ avec $\lambda, \mu \in \mathbb{R}, (b^2 -4ac) <0 , \alpha
 		\in \mathbb{N}^{*}$
 \end{enumerate}
-
 
 On trouve facilement les primitives des fonctions de type (1) et (2)
 
