--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{Topologie dans $\mathbb{R}$}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -16,9 +15,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{Topologie dans $\mathbb{R}$}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Voisinages {{{1
 \section{Voisinages}
 \begin{defi} Voisinage \\
 	Soit $x$ un r\'eel et $A \subset \mathbb{R}$. $A$ est voisinage de $x$ s'il existe $\epsilon > 0$ tel que:
@@ -34,6 +37,7 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 	\end{itemize}
 \end{prop}
 
+%Ouverts et fermés {{{1
 \section{Ouverts et ferm\'es}
 \begin{defi}
 	Soit $A \subset \mathbb{R}$,
@@ -53,6 +57,7 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 	\end{itemize}
 \end{prop}
 
+%Adhérence, intérieur {{{1
 \section{Adh\'erence, int\'erieur}
 \begin{defi}
 	Soit $A \subset \mathbb{R}$
