--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{\'Equations diff\'erentielles}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -14,9 +13,13 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{\'Equations diff\'erentielles}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Généralités {{{1
 \section{G\'en\'eralit\'es}
 Une \'equation diff\'erenielle est une \'ecriure du type:
 \[F(t, y, y', \hdots, y^{(n)}) = 0\]
@@ -35,6 +38,7 @@ Une solution est par d\'efinition une application continue $f:J\rightarrow \math
 	\end{itemize}
 \end{rqs}
 
+%Équations différentielles linéaires {{{1
 \section{\'Equations diff\'erentielles lin\'eaires}
 Ce sont des \'equations du type:
 \[a_0(x)y + a_1(x)y' + \hdots + a_n(x)y^{(n)} = b(x)\]
