--- a/Équivalents.tex
+++ b/Équivalents.tex
@@ -1,12 +1,11 @@
+%Préamble {{{1
 \documentclass[fleqn]{article}
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{verbatim}
 \usepackage{booktabs}
-
-\title{\'Equivalents}
-\date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
@@ -14,20 +13,27 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
+\title{\'Equivalents}
+\date{}
+
 \begin{document}
 \maketitle
 
+%Définitions {{{1
 \section{D\'efinitions}
 Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a $D$, $f,g: D \rightarrow \mathbb{R}$. Au voisinage de A:
 \begin{enumerate}
 	\item f n\'egligeable devant g: \\
-		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \epsilon: U \cap D \rightarrow \mathbb{R}$ tel que
+		$\exists\ U \in V_{\overline{\mathbb{R}}%
+		}(a), \epsilon: U \cap D \rightarrow \mathbb{R}$ tel que
 		$\epsilon(x)\underset{a}{\rightarrow}  0$ et $\forall t \in U \cap D, f(t)=\epsilon(t)g(t)$
 	\item f domin\'ee par g: \\
-		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \omega: U \cap D \rightarrow \mathbb{R}$ tel que $\omega$ born\'ee et
+		$\exists\ U \in V_{\overline{\mathbb{R}}%
+		}(a), \omega: U \cap D \rightarrow \mathbb{R}$ tel que $\omega$ born\'ee et
 		$\forall t \in U \cap D, f(t)=\omega(t)g(t)$
 	\item f \'equivalent \`a g: \\
-		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \varphi: U \cap D \rightarrow \mathbb{R}$ tel que
+		$\exists\ U \in V_{\overline{\mathbb{R}}%
+		}(a), \varphi: U \cap D \rightarrow \mathbb{R}$ tel que
 		$\varphi(x)\underset{a}{\rightarrow} 1$ et $\forall t \in U \cap D, f(t)=\varphi(t)g(t)$
 \end{enumerate}
 
@@ -44,6 +50,7 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 	Alors, f et g on m\^eme signe au voisinage de a et s'annulent simultan\'ement. De plus, si g admet une limite en a alors f aussi
 \end{theo}
 
+%Équivalents classiques {{{1
 \section{\'Equivalents classiques}
 \begin{tabular}{@{}ll@{}}
 		$\sin x \underset{0}{\sim} x$ & $\arcsin x \underset{0}{\sim} x$ \\
@@ -54,6 +61,7 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 		$\cos x \underset{0}{\sim} 1$ & $\sqrt{1+x} \underset{0}{\sim} 1$ \\
 \end{tabular}
 
+%Faits de base {{{1
 \section{Faits de base}
 \begin{itemize}
 	\item [-] $f_1(x) = o(g(x))$\\
@@ -69,7 +77,9 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 \end{itemize}
 
 \begin{theo} Composition (\`a droite)\\
-	$f,g: D \rightarrow \mathbb{R}, a \in Adh_{\overline{\mathbb{R}}}(D), \varphi: B \rightarrow D, b \in Adh_{\overline{\mathbb{R}}}(B)$ \\
+	$f,g: D \rightarrow \mathbb{R}, a \in Adh_{\overline{\mathbb{R}}%
+	}(D), \varphi: B \rightarrow D, b \in Adh_{\overline{\mathbb{R}}%
+	}(B)$ \\
 	On suppose $\varphi(x)\underset{t\rightarrow b}{\rightarrow} a$ et $f(x)\underset{a}{\sim} g(x)$, alors
 	\[f(\varphi(t))\underset{b}{\sim} g(\varphi(t))\]
 
